Logout link implemented for Slingshot UI. Fix to minor issue when displaying login page on Safari.
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@9568 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/templates/login/login.css
+++ b/root/projects/slingshot/source/web/templates/login/login.css
@@ -31,6 +31,7 @@ input
    font-size: 12px;
    font-weight: bold;
    color: #515354;
+   visibility: hidden;
 }
 
 .login-copyright
